fix(build.gradle.kts): compatibility with arm CPU